fix: Use text-wrap: balance on headers.

--- a/packages/video-topper/src/style.css
+++ b/packages/video-topper/src/style.css
@@ -1,3 +1,20 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
 #video-topper {
   position: relative;
   width: 100vw;
@@ -63,7 +80,7 @@
   margin: 0;
   margin-bottom: 1rem;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  max-width: 85%;
+  max-inline-size: 15ch;
   letter-spacing: normal;
   word-spacing: normal;
 }
@@ -77,7 +94,7 @@
 
 @media (min-width: 1024px) {
   #video-topper .video-topper__title {
-    max-width: 75%;
+    max-inline-size: 20ch;
   }
 }
 
@@ -103,13 +120,7 @@
   #video-topper .video-topper__subtitle {
     font-size: 2rem;
     line-height: 2.5rem;
-    max-width: 85%;
-  }
-}
-
-@media (min-width: 1024px) {
-  #video-topper .video-topper__subtitle {
-    max-width: 75%;
+    max-inline-size: 40ch;
   }
 }
 
